# schnorrkel

./: .gitignore  Cargo.toml
benches/: schnorr_benchmarks.rs
src/: aead.rs  batch.rs  cert.rs  context.rs  derive.rs  errors.rs  keys.rs  lib.rs  musig.rs  points.rs  scalars.rs  serdey.rs  sign.rs  vrf.rs
