[package]
name = "schnorrkel-og"
version = "0.11.0-pre.0"
authors = ["Jeff Burdges <jeff@web3.foundation>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/w3f/schnorrkel"
documentation = "https://docs.rs/schnorrkel"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "Schnorr VRF, signatures, etc. using the Ristretto group"
exclude = [ ".gitignore", "res/*" ]
edition = "2018"

# [badges]
# travis-ci = { repository = "dalek-cryptography/ed25519-dalek", branch = "master"}

[dependencies.aead]
version = "0.4.3"
default-features = false
optional = true

[dependencies.arrayref]
version = "0.3.6"
default-features = false

[dependencies.arrayvec]
# needs to match parity-scale-code which is "=0.7.0"
version = "0.7.0"
default-features = false

[dependencies.curve25519-dalek]
package = "curve25519-dalek"
version = "4.0.0-rc.1"
default-features = false
features = ["digest", "zeroize"]

[dependencies.subtle]
version = "2.2.1"
default-features = false

[dependencies.merlin]
version = "3.0.0"
# features = ["debug-transcript"]
default-features = false

# [dependencies.rand]
# version = "0.8.3"
# default-features = false
# optional = true

[dependencies.rand_core]
version = "0.6.2"
default-features = false

[dependencies.rand_chacha]
version = "0.3.1"
default-features = false
optional = true

[dependencies.serde_crate]
version = "1.0.136"
package = "serde"
default-features = false
optional = true

[dependencies.serde_bytes]
version = "0.11.5"
default-features = false
optional = true

[dependencies.cfg-if]
version = "1.0.0"
optional = true

[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.failure]
version = "0.1.8"
default-features = false
optional = true

[dependencies.zeroize]
version = "1.5.2"
default-features = false
features = ["zeroize_derive"]

[dev-dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
# hex = "0.3.2"
hex-literal = "0.3.3"
sha3 = "0.10"
bincode = "1.3.3"
criterion = "0.3.5"
serde_json = "1.0.78"

[[bench]]
name = "schnorr_benchmarks"
harness = false

[features]
default = ["alloc", "getrandom", "cfg-if"] # "rand"
preaudit_deprecated = []
nightly = ["rand/nightly"] # "zeroize/nightly"
alloc = ["curve25519-dalek/alloc", "rand_core/alloc", "serde_bytes/alloc"]
std = ["getrandom", "serde_bytes/std"] # "failure/std"
asm = ["sha2/asm"]
serde = ["serde_crate", "serde_bytes", "cfg-if"]
precomputed-tables = ["curve25519-dalek/precomputed-tables"]
# We cannot make getrandom a direct dependency because rand_core makes
# getrandom a feature name, which requires forwarding.
getrandom = ["rand_core/getrandom"]
# We thus cannot forward the wasm-bindgen feature of getrandom,
# but our consumers could depend upon getrandom and activate its
# wasm-bindgen feature themselve, which works due to cargo features
# being additive.
# wasm-bindgen = ["getrandom/wasm-bindgen"]
# See https://github.com/rust-lang/cargo/issues/9210
# and https://github.com/w3f/schnorrkel/issues/65#issuecomment-786923588